fix(popover/menu): scrollbar now appears when content exceeds maximum size
When there were many options in a Select, a scrollbar did not appear. Just as it did not appear in a Menu, whose max-height was not respected.

With this commit, these problems have been solved.

--- a/packages/actify/src/components/Menus/menu-popover.module.css
+++ b/packages/actify/src/components/Menus/menu-popover.module.css
@@ -28,3 +28,7 @@
   );
   scrollbar-width: inherit;
 }
+
+.dialog.open {
+  overflow: auto;
+}
